# tech-blog-reference-source-codes

./: .gitmodules
plugin_architecture_exercise/: CMakeLists.txt  README.md
plugin_architecture_exercise/include/: animal.h  plugin_core.h
plugin_architecture_exercise/include/lion/: lion.h
plugin_architecture_exercise/resources/: test_pipeline.yaml
plugin_architecture_exercise/src/: CMakeLists.txt  main_pipeline.cpp
plugin_architecture_exercise/src/lion/: CMakeLists.txt  lion.cpp
